--- a/resources/lib/bootstrap/css/bootstrap.css
+++ b/resources/lib/bootstrap/css/bootstrap.css
@@ -32,7 +32,7 @@ canvas,
 progress,
 video {
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: baseline;
 }
 audio:not([controls]) {
   display: none;
